--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@ ABOUT US
 
     <div class="founders-container">
        <div class="founder">
-          <img src="bob.webp" class="founder-image"/>
+          <img src="IMG_3090.webp" class="founder-image"/>
          <h4>
             Bob S. Sigma
          </h4>
