--- a/about/index.html
+++ b/about/index.html
@@ -78,7 +78,7 @@ ABOUT US
     
     <div class="contributers-container">
        <div class="contributer">
-          <img src="airplane.jpeg" class="contributer-image"/>
+          <img src="IMG_3089.jpeg" class="contributer-image"/>
            <h4>
               Air B. Plane
            </h4>
