--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@ ABOUT US
        </div>
 
        <div class="founder">
-          <img src="boe.jpeg" class="founder-image"/>
+          <img src="IMG_3084.jpeg" class="founder-image"/>
          <h4>
             Boe J. Riden
          </h4>
