--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="pages">
-    <img src="../icon.png" alt="Icon" class="icon" />
+    <img src="../icon.PNG" alt="Icon" class="icon" />
 
     <div class="pages-container">
       <a href="../content" class="page">CONTENT</a>
