--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="pages">
-    <img src="../icon.png" alt="Icon" class="icon" />
+    <img src="../icon.PNG" alt="Icon" class="icon" />
 
     <div class="pages-container">
       <a href="../home" class="page">HOME</a>
