--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="pages">
-    <img src="../icon.PNG" alt="Icon" class="icon" />
+    <img src="../icon.png" alt="Icon" class="icon" />
 
     <div class="pages-container">
       <a href="../content" class="page">CONTENT</a>
@@ -53,11 +53,22 @@ CONTENT
       </p>
 
     </div>
+
+    <div class="preview">
+      <h2>
+    HEALTH ASPECTS
+    </h2>
+
+      <p>
+        There are different aspects for Health, most of them relate to the environment around...<b><a href="../content" class="read-more">READ MORE</a></b>
+      </p>
+
+    </div>
   </div>
 
   <div class="footer">
     <p style="width: 95%;">
-       Copyright Thingy. Yes very sigma and skibidi. Mewing master. Sticking out your gyat for the rizzler, you're so skibidi, you're so fanum tax, I just wanna be your sigma, give me your ohio. pls 10/10.
+       © Copyright.
     </p>
     
   </div>
