--- a/content/index.html
+++ b/content/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="pages">
-    <img src="../icon.PNG" alt="Icon" class="icon" />
+    <img src="../icon.png" alt="Icon" class="icon" />
 
     <div class="pages-container">
       <a href="../home" class="page">HOME</a>
@@ -171,7 +171,7 @@ CONTENT
 
   <div class="footer">
     <p style="width: 95%;">
-       Copyright Thingy. Yes very sigma and skibidi. Mewing master. pls 10/10.
+       © Copyright.
     </p>
 
   </div>
