--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="pages">
-    <img src="../icon.PNG" alt="Icon" class="icon" />
+    <img src="../icon.png" alt="Icon" class="icon" />
 
     <div class="pages-container">
       <a href="../home" class="page">HOME</a>
@@ -63,7 +63,7 @@ CONTACT US
 
   <div class="footer">
     <p style="width: 95%;">
-       Copyright Thingy. Yes very sigma and skibidi. Mewing master. Sticking out your gyat for the rizzler, you're so skibidi, you're so fanum tax, I just wanna be your sigma, give me your ohio. pls 10/10.
+      © Copyright.
     </p>
 
   </div>
