--- a/about/index.html
+++ b/about/index.html
@@ -96,7 +96,7 @@ ABOUT US
 
   <div class="footer">
     <p style="width: 95%;">
-       Copyright Thingy. Yes very sigma and skibidi. Mewing master. Sticking out your gyat for the rizzler, you're so skibidi, you're so fanum tax, I just wanna be your sigma, give me your ohio. pls 10/10.
+       © Copyright.
     </p>
 
   </div>
